--- a/Vis_Tree_Ring_Gen_Guided.ipynb
+++ b/Vis_Tree_Ring_Gen_Guided.ipynb
@@ -5,7 +5,7 @@
    "id": "14c2d134-3db8-4a94-a694-fd51ef3fc2d3",
    "metadata": {},
    "source": [
-    "# Visualization of Tree-Ring Watermark for ImageNet-Guided Diffusion\n"
+    "# Visualization of Tree-Ring Watermark's Generation for ImageNet-Guided Diffusion\n"
    ]
   },
   {
@@ -33,7 +33,7 @@
     "from utils import *\n",
     "\n",
     "# Experiment name\n",
-    "experiment_name = \"Visualize_Tree_Ring_Guided\"\n",
+    "experiment_name = \"Vis_Tree_Ring_Gen_Guided\"\n",
     "\n",
     "# Experiment parameters\n",
     "image_size = 64\n",
@@ -295,13 +295,13 @@
     "# Concate selected figures into one and show\n",
     "concatenate_figures(\n",
     "    figs[0:-1:17] + [figs[-1]],\n",
-    "    save_path=\"./results/Visualize_Tree_Ring_Guided/forward_diffusion.jpg\",\n",
+    "    save_path=f\"./results/{experiment_name}/forward_diffusion.jpg\",\n",
     "    display=True,\n",
     ")\n",
     "# Make gif from the figures\n",
     "make_gif(\n",
     "    figs,\n",
-    "    save_path=\"./results/Visualize_Tree_Ring_Guided/forward_diffusion.gif\",\n",
+    "    save_path=f\"./results/{experiment_name}/forward_diffusion.gif\",\n",
     "    display=True,\n",
     ")\n",
     "\n",
