--- a/Vis_Tree_Ring_Gen_Guided.ipynb
+++ b/Vis_Tree_Ring_Gen_Guided.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "# Wandb and device setup\n",
     "os.environ[\"WANDB_DIR\"] = f\"results/{experiment_name}/\"\n",
-    "# os.environ[\"WANDB_MODE\"] = \"dryrun\"\n",
+    "os.environ[\"WANDB_MODE\"] = \"dryrun\"\n",
     "os.environ[\"WANDB_SILENT\"] = \"true\"\n",
     "wandb.init(\n",
     "    project=experiment_name,\n",
