finish lpips and watson, remove open_clip scripts

--- a/notebooks/Test.ipynb
+++ b/notebooks/Test.ipynb
@@ -9,8 +9,8 @@
     "from datasets import load_from_disk\n",
     "\n",
     "dataset = load_from_disk(\"/fs/nexus-projects/HuangWM/datasets/mscoco_5k\")\n",
-    "images1 = [dataset[i][\"image\"] for i in range(0, 200)]\n",
-    "images2 = [dataset[i][\"image\"] for i in range(200, 400)]"
+    "images1 = [dataset[i][\"image\"] for i in range(0, 2)]\n",
+    "images2 = [dataset[i][\"image\"] for i in range(2, 4)]"
    ]
   },
   {
@@ -22,16 +22,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.509712219238281 2961415.0 nan\n"
+      "74.7677993774414 70\n"
      ]
     }
    ],
    "source": [
     "from metrics import *\n",
     "\n",
+    "prompt = \"a photo of a person\"\n",
+    "\n",
+    "ppl_model, ppl_tokenizer = load_perplexity_model_and_tokenizer()\n",
+    "clip_tokenizer = load_open_clip_tokenizer()\n",
+    "\n",
     "print(\n",
-    "    compute_watson(images1[0], images2[0], mode=\"vgg\"),\n",
-    "    compute_watson(images1[0], images2[0], mode=\"fft\"),\n",
+    "    compute_prompt_perplexity(prompt, ppl_model, ppl_tokenizer, stride=512),\n",
+    "    compute_open_clip_num_tokens(prompt, clip_tokenizer),\n",
     ")"
    ]
   }
