check clip score

--- a/notebooks/Test.ipynb
+++ b/notebooks/Test.ipynb
@@ -9,8 +9,25 @@
     "from datasets import load_from_disk\n",
     "\n",
     "dataset = load_from_disk(\"/fs/nexus-projects/HuangWM/datasets/mscoco_5k\")\n",
-    "images1 = [dataset[i][\"image\"] for i in range(0, 2)]\n",
-    "images2 = [dataset[i][\"image\"] for i in range(2, 4)]"
+    "images1 = [dataset[i][\"image\"] for i in range(0, 5)]\n",
+    "images2 = [dataset[i][\"image\"] for i in range(5, 10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from metrics import *\n",
+    "\n",
+    "print(\n",
+    "    compute_mse_repeated(images1, images2),\n",
+    "    compute_psnr_repeated(images1, images2),\n",
+    "    compute_ssim_repeated(images1, images2),\n",
+    "    compute_lpips_repeated(images1, images2, mode=\"vgg\"),\n",
+    "    compute_watson_repeated(images1, images2, mode=\"vgg\"),\n",
+    ")"
    ]
   },
   {
@@ -22,21 +39,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "74.7677993774414 70\n"
+      "7.520791053771973 14 0.15173929929733276\n"
      ]
     }
    ],
    "source": [
     "from metrics import *\n",
     "\n",
-    "prompt = \"a photo of a person\"\n",
+    "image = dataset[0][\"image\"]\n",
+    "prompt = dataset[0][\"prompt\"]\n",
     "\n",
-    "ppl_model, ppl_tokenizer = load_perplexity_model_and_tokenizer()\n",
-    "clip_tokenizer = load_open_clip_tokenizer()\n",
+    "# ppl_model, ppl_tokenizer = load_perplexity_model_and_tokenizer()\n",
+    "# clip_tokenizer = load_open_clip_tokenizer()\n",
+    "(\n",
+    "    clip_model,\n",
+    "    clip_preprocess,\n",
+    "    clip_tokenizer,\n",
+    ") = load_open_clip_model_preprocess_and_tokenizer()\n",
+    "\n",
     "\n",
     "print(\n",
-    "    compute_prompt_perplexity(prompt, ppl_model, ppl_tokenizer, stride=512),\n",
-    "    compute_open_clip_num_tokens(prompt, clip_tokenizer),\n",
+    "    # compute_prompt_perplexity(prompt, ppl_model, ppl_tokenizer, stride=512),\n",
+    "    # compute_open_clip_num_tokens(prompt, clip_tokenizer),\n",
+    "    compute_clip_score(image, prompt, clip_model, clip_preprocess, clip_tokenizer),\n",
     ")"
    ]
   }
