add sesthetics scorer and improved diffusiondb

--- a/notebooks/Test.ipynb
+++ b/notebooks/Test.ipynb
@@ -2,15 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from datasets import load_from_disk\n",
+    "from tqdm.auto import tqdm, trange\n",
+    "from datasets import load_dataset, load_from_disk\n",
+    "from open_clip import get_tokenizer\n",
+    "from metrics import (\n",
+    "    load_perplexity_model_and_tokenizer,\n",
+    "    compute_prompt_perplexity,\n",
+    "    load_aesthetics_and_artifacts_models,\n",
+    "    compute_aesthetics_and_artifacts_scores,\n",
+    ")\n",
     "\n",
-    "dataset = load_from_disk(\"/fs/nexus-projects/HuangWM/datasets/mscoco_5k\")\n",
-    "images1 = [dataset[i][\"image\"] for i in range(0, 5)]\n",
-    "images2 = [dataset[i][\"image\"] for i in range(5, 10)]"
+    "\n",
+    "# dataset = load_dataset(\"poloclub/diffusiondb\", \"2m_random_100k\")\n",
+    "\n",
+    "# dataset.save_to_disk(\n",
+    "#     \"/fs/nexus-scratch/mcding/Watermark-Experiments/datasets/source/diffusiondb/2m_random_100k\"\n",
+    "# )\n",
+    "\n",
+    "# dataset = load_from_disk(\n",
+    "#     os.path.join(os.environ.get(\"DATASET_DIR\"), \"./source/diffusiondb/2m_random_100k\")\n",
+    "# )[\"train\"]\n",
+    "\n",
+    "# dataset = dataset.filter(\n",
+    "#     # filter width and height\n",
+    "#     lambda x: (x[\"width\"] == 512 and x[\"height\"] == 512)\n",
+    "#     # filter diffusion hyperparameters\n",
+    "#     and (x[\"step\"] == 50 and x[\"cfg\"] == 7 and x[\"sampler\"] == \"k_lms\")\n",
+    "#     # filter nsfw\n",
+    "#     and (x[\"image_nsfw\"] < 0.2 and x[\"prompt_nsfw\"] < 0.1)\n",
+    "# )\n",
+    "# dataset = dataset.remove_columns(\n",
+    "#     [\n",
+    "#         \"seed\",\n",
+    "#         \"step\",\n",
+    "#         \"cfg\",\n",
+    "#         \"sampler\",\n",
+    "#         \"width\",\n",
+    "#         \"height\",\n",
+    "#         \"user_name\",\n",
+    "#         \"timestamp\",\n",
+    "#         \"image_nsfw\",\n",
+    "#         \"prompt_nsfw\",\n",
+    "#     ]\n",
+    "# )\n",
+    "\n",
+    "# dataset.save_to_disk(\n",
+    "#     os.path.join(os.environ.get(\"DATASET_DIR\"), \"./selected/diffusiondb_temp1\")\n",
+    "# )\n",
+    "\n",
+    "# dataset = load_from_disk(\n",
+    "#     os.path.join(os.environ.get(\"DATASET_DIR\"), \"./selected/diffusiondb_temp1\")\n",
+    "# )\n",
+    "\n",
+    "# clip_tokenizer = get_tokenizer(\"ViT-g-14\")\n",
+    "\n",
+    "# dataset = dataset.filter(\n",
+    "#     lambda data: 0 < len(clip_tokenizer.encode(data[\"prompt\"])) <= 75\n",
+    "# )\n",
+    "\n",
+    "# dataset.save_to_disk(\n",
+    "#     os.path.join(os.environ.get(\"DATASET_DIR\"), \"./selected/diffusiondb_temp2\")\n",
+    "# )\n",
+    "\n",
+    "# dataset = load_from_disk(\n",
+    "#     os.path.join(os.environ.get(\"DATASET_DIR\"), \"./selected/diffusiondb_temp2\")\n",
+    "# )\n",
+    "\n",
+    "# prompts = [dataset[i][\"prompt\"] for i in trange(len(dataset))]\n",
+    "\n",
+    "# clip_tokenizer = get_tokenizer(\"ViT-g-14\")\n",
+    "\n",
+    "# normalized_prompts = []\n",
+    "\n",
+    "# for prompt in tqdm(prompts):\n",
+    "#     normalized_prompts.append(clip_tokenizer.decode(clip_tokenizer.encode(prompt)))\n",
+    "\n",
+    "# dataset = dataset.add_column(\"normalized_prompt\", normalized_prompts)\n",
+    "\n",
+    "# dataset = dataset.rename_column(\"prompt\", \"original_prompt\")\n",
+    "# dataset = dataset.rename_column(\"normalized_prompt\", \"prompt\")\n",
+    "# dataset = dataset.remove_columns([\"original_prompt\"])\n",
+    "\n",
+    "# dataset.save_to_disk(\n",
+    "#      os.path.join(os.environ.get(\"DATASET_DIR\"), \"./selected/diffusiondb_temp3\")\n",
+    "# )\n",
+    "\n",
+    "# dataset = load_from_disk(\n",
+    "#     os.path.join(os.environ.get(\"DATASET_DIR\"), \"./selected/diffusiondb_temp3\")\n",
+    "# )\n",
+    "\n",
+    "# unique_prompts = dataset.unique(\"prompt\")\n",
+    "\n",
+    "# prompt_to_index = {}\n",
+    "\n",
+    "# for i, prompt in tqdm(enumerate(dataset[\"prompt\"]), total=len(dataset)):\n",
+    "#     if prompt not in prompt_to_index:\n",
+    "#         prompt_to_index[prompt] = i\n",
+    "# dataset = dataset.select(list(prompt_to_index.values()))\n",
+    "\n",
+    "# assert len(unique_prompts) == len(dataset)\n",
+    "\n",
+    "\n",
+    "# ppl_models = load_perplexity_model_and_tokenizer()\n",
+    "# aa_models = load_aesthetics_and_artifacts_models()\n",
+    "\n",
+    "\n",
+    "# images = [dataset[i][\"image\"] for i in trange(len(dataset))]\n",
+    "\n",
+    "# prompts = [dataset[i][\"prompt\"] for i in trange(len(dataset))]\n",
+    "\n",
+    "# ppls = []\n",
+    "# for prompt in tqdm(prompts):\n",
+    "#     ppls.append(compute_prompt_perplexity(prompt, ppl_models))\n",
+    "\n",
+    "# aesthetics = []\n",
+    "# artifacts = []\n",
+    "# for image in tqdm(images):\n",
+    "#     aesthetic, artifact = compute_aesthetics_and_artifacts_scores(image, aa_models)\n",
+    "#     aesthetics.append(aesthetic)\n",
+    "#     artifacts.append(artifact)\n",
+    "\n",
+    "\n",
+    "# dataset = dataset.add_column(\"ppl\", ppls)\n",
+    "# dataset = dataset.add_column(\"aesthetic\", aesthetics)\n",
+    "# dataset = dataset.add_column(\"artifacts\", artifacts)\n",
+    "\n",
+    "dataset = load_from_disk(\n",
+    "    os.path.join(os.environ.get(\"DATASET_DIR\"), \"./selected/diffusiondb_temp4\")\n",
+    ")\n",
+    "\n",
+    "print(dataset)"
    ]
   },
   {
@@ -19,50 +146,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from metrics import *\n",
+    "import numpy as np\n",
     "\n",
-    "print(\n",
-    "    compute_mse_repeated(images1, images2),\n",
-    "    compute_psnr_repeated(images1, images2),\n",
-    "    compute_ssim_repeated(images1, images2),\n",
-    "    compute_lpips_repeated(images1, images2, mode=\"vgg\"),\n",
-    "    compute_watson_repeated(images1, images2, mode=\"vgg\"),\n",
-    ")"
+    "aesthetics = dataset[\"aesthetic\"]\n",
+    "artifacts = dataset[\"artifacts\"]\n",
+    "ppls = dataset[\"ppl\"]\n",
+    "\n",
+    "key = np.array(aesthetics) + (10 - np.array(artifacts))\n",
+    "\n",
+    "dataset_appended = dataset.add_column(\"key\", key)\n",
+    "\n",
+    "dataset_sorted = dataset_appended.sort(\"key\", reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.520791053771973 14 0.15173929929733276\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from metrics import *\n",
+    "from IPython.display import display\n",
+    "import json\n",
     "\n",
-    "image = dataset[0][\"image\"]\n",
-    "prompt = dataset[0][\"prompt\"]\n",
+    "prompt_dict = {}\n",
+    "for i in trange(5000):\n",
+    "    # dataset_sorted[i][\"image\"].save(f\"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real/{i}.png\")\n",
+    "    prompt_dict[str(i)] = dataset_sorted[i][\"prompt\"]\n",
     "\n",
-    "# ppl_model, ppl_tokenizer = load_perplexity_model_and_tokenizer()\n",
-    "# clip_tokenizer = load_open_clip_tokenizer()\n",
-    "(\n",
-    "    clip_model,\n",
-    "    clip_preprocess,\n",
-    "    clip_tokenizer,\n",
-    ") = load_open_clip_model_preprocess_and_tokenizer()\n",
-    "\n",
-    "\n",
-    "print(\n",
-    "    # compute_prompt_perplexity(prompt, ppl_model, ppl_tokenizer, stride=512),\n",
-    "    # compute_open_clip_num_tokens(prompt, clip_tokenizer),\n",
-    "    compute_clip_score(image, prompt, clip_model, clip_preprocess, clip_tokenizer),\n",
-    ")"
+    "with open(\n",
+    "    \"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/prompts_new_utf8.json\",\n",
+    "    \"w\",\n",
+    ") as json_file:\n",
+    "    json.dump(prompt_dict, json_file, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataset.save_to_disk(\n",
+    "#     os.path.join(os.environ.get(\"DATASET_DIR\"), \"./selected/diffusiondb_temp5\")\n",
+    "# )"
    ]
   }
  ],
