--- a/notebooks/Snippet.ipynb
+++ b/notebooks/Snippet.ipynb
@@ -6,8 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stable Diffusion Pipeline\n",
-    "\n",
     "from diffusers import StableDiffusionPipeline, EulerDiscreteScheduler\n",
     "import torch\n",
     "from IPython.display import display\n",
@@ -33,8 +31,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
