succeed in connecting hf space

--- a/dev_notebooks/Image_Quality_Metrics.ipynb
+++ b/dev_notebooks/Image_Quality_Metrics.ipynb
@@ -1,5 +1,17 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attacked_path = \"/fs/nexus-projects/HuangWM/datasets/attacked/diffusiondb/distortion_single_rotation-9-real\"\n",
+    "\n",
+    "original_path = \"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real\""
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "venv",
