cli with reverse

--- a/dev_notebooks/Image_Quality_Metrics.ipynb
+++ b/dev_notebooks/Image_Quality_Metrics.ipynb
@@ -2,14 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "attacked_path = \"/fs/nexus-projects/HuangWM/datasets/attacked/diffusiondb/distortion_single_rotation-9-real\"\n",
+    "import os\n",
     "\n",
+    "attacked_path = \"/fs/nexus-projects/HuangWM/datasets/attacked/diffusiondb/distortion_single_rotation-9-real\"\n",
     "original_path = \"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_dir_validation(path, limit=5000):\n",
+    "    assert limit >= 0\n",
+    "    found_filenames = list(os.listdir(path))\n",
+    "    expected_filenames = [f\"{i}.png\" for i in range(limit)]\n",
+    "    for filename in expected_filenames:\n",
+    "        assert filename in found_filenames\n",
+    "\n",
+    "\n",
+    "image_dir_validation(attacked_path)\n",
+    "image_dir_validation(original_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
