finish preparing datasets

--- a/dev_notebooks/Prepare_DALLE3_Dataset.ipynb
+++ b/dev_notebooks/Prepare_DALLE3_Dataset.ipynb
@@ -12,6 +12,7 @@
     "from IPython.display import display\n",
     "from tqdm.auto import tqdm, trange\n",
     "from datasets import load_dataset, load_from_disk\n",
+    "from torchvision.transforms import Compose, CenterCrop, Resize\n",
     "from open_clip import get_tokenizer\n",
     "from metrics import (\n",
     "    load_perplexity_model_and_tokenizer,\n",
@@ -26,37 +27,21 @@
     "aa_models = load_aesthetics_and_artifacts_models()\n",
     "\n",
     "# Download and save to disk\n",
-    "# dataset = load_dataset(\"poloclub/diffusiondb\", \"2m_random_100k\")\n",
+    "# dataset = load_dataset(\"laion/dalle-3-dataset\")\n",
     "# dataset = dataset[\"train\"]\n",
-    "# dataset.save_to_disk(\"/fs/nexus-projects/HuangWM/datasets/source/diffusiondb_100k\")\n",
+    "# dataset.save_to_disk(\"/fs/nexus-projects/HuangWM/datasets/source/dalle3_10k\")\n",
     "\n",
-    "dataset = load_from_disk(\"/fs/nexus-projects/HuangWM/datasets/source/diffusiondb_100k\")\n",
-    "\n",
-    "# Filter generation setup and nsfw\n",
-    "dataset = dataset.filter(\n",
-    "    # filter width and height\n",
-    "    lambda x: (x[\"width\"] == 512 and x[\"height\"] == 512)\n",
-    "    # filter diffusion hyperparameters\n",
-    "    and (x[\"step\"] == 50 and x[\"cfg\"] == 7 and x[\"sampler\"] == \"k_lms\")\n",
-    "    # filter nsfw\n",
-    "    and (x[\"image_nsfw\"] < 0.2 and x[\"prompt_nsfw\"] < 0.1)\n",
-    ")\n",
+    "dataset = load_from_disk(\"/fs/nexus-projects/HuangWM/datasets/source/dalle3_10k\")\n",
     "\n",
     "# Delete unnecessary columns\n",
     "dataset = dataset.remove_columns(\n",
     "    [\n",
-    "        \"seed\",\n",
-    "        \"step\",\n",
-    "        \"cfg\",\n",
-    "        \"sampler\",\n",
-    "        \"width\",\n",
-    "        \"height\",\n",
-    "        \"user_name\",\n",
+    "        \"link\",\n",
+    "        \"message_id\",\n",
     "        \"timestamp\",\n",
-    "        \"image_nsfw\",\n",
-    "        \"prompt_nsfw\",\n",
     "    ]\n",
-    ")"
+    ")\n",
+    "dataset = dataset.rename_column(\"caption\", \"prompt\")"
    ]
   },
   {
@@ -74,16 +59,23 @@
     "    normalized_prompts.append(clip_tokenizer.decode(clip_tokenizer.encode(prompt)))\n",
     "dataset = dataset.add_column(\"normalized_prompt\", normalized_prompts)\n",
     "dataset = dataset.remove_columns([\"prompt\"])\n",
-    "dataset = dataset.rename_column(\"normalized_prompt\", \"prompt\")\n",
+    "dataset = dataset.rename_column(\"normalized_prompt\", \"prompt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Resize images to 512x512\n",
+    "def map(data):\n",
+    "    image = data[\"image\"]\n",
+    "    transform = Compose([CenterCrop(min(image.size)), Resize((512, 512))])\n",
+    "    return {\"image\": transform(image), \"prompt\": data[\"prompt\"]}\n",
     "\n",
-    "# Filter and remove duplicated prompts\n",
-    "unique_prompts = dataset.unique(\"prompt\")\n",
-    "prompt_to_index = {}\n",
-    "for i, prompt in tqdm(enumerate(dataset[\"prompt\"]), total=len(dataset)):\n",
-    "    if prompt not in prompt_to_index:\n",
-    "        prompt_to_index[prompt] = i\n",
-    "dataset = dataset.select(list(prompt_to_index.values()))\n",
-    "assert len(unique_prompts) == len(dataset)"
+    "\n",
+    "dataset = dataset.map(map)"
    ]
   },
   {
@@ -126,20 +118,18 @@
     "prompt_dict = {}\n",
     "for i in trange(selected_size):\n",
     "    dataset[i][\"image\"].save(\n",
-    "        f\"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real/{i}.png\"\n",
+    "        f\"/fs/nexus-projects/HuangWM/datasets/main/dalle3/real/{i}.png\"\n",
     "    )\n",
     "    prompt_dict[str(i)] = dataset[i][\"prompt\"]\n",
     "with open(\n",
-    "    \"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/prompts.json\",\n",
+    "    \"/fs/nexus-projects/HuangWM/datasets/main/dalle3/prompts.json\",\n",
     "    \"w\",\n",
     ") as json_file:\n",
     "    json.dump(prompt_dict, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
     "\n",
     "# Save the dataset to disk\n",
-    "dataset.save_to_disk(\n",
-    "    \"/fs/nexus-projects/HuangWM/datasets/source/diffusiondb_100k_filtered\"\n",
-    ")"
+    "dataset.save_to_disk(\"/fs/nexus-projects/HuangWM/datasets/source/dalle3_10k_filtered\")"
    ]
   }
  ],
