--- a/dev_notebooks/Prepare_MSCOCO_Dataset.ipynb
+++ b/dev_notebooks/Prepare_MSCOCO_Dataset.ipynb
@@ -11,7 +11,9 @@
     "import numpy as np\n",
     "from IPython.display import display\n",
     "from tqdm.auto import tqdm, trange\n",
-    "from datasets import load_dataset, load_from_disk\n",
+    "from torchvision.datasets import CocoCaptions\n",
+    "from torchvision.transforms import Compose, CenterCrop, Resize\n",
+    "from datasets import load_dataset, load_from_disk, Dataset\n",
     "from open_clip import get_tokenizer\n",
     "from metrics import (\n",
     "    load_perplexity_model_and_tokenizer,\n",
@@ -25,38 +27,27 @@
     "ppl_models = load_perplexity_model_and_tokenizer()\n",
     "aa_models = load_aesthetics_and_artifacts_models()\n",
     "\n",
-    "# Download and save to disk\n",
-    "# dataset = load_dataset(\"poloclub/diffusiondb\", \"2m_random_100k\")\n",
-    "# dataset = dataset[\"train\"]\n",
-    "# dataset.save_to_disk(\"/fs/nexus-projects/HuangWM/datasets/source/diffusiondb_100k\")\n",
     "\n",
-    "dataset = load_from_disk(\"/fs/nexus-projects/HuangWM/datasets/source/diffusiondb_100k\")\n",
+    "# coco_dataset = CocoCaptions(\n",
+    "#     root=\"/fs/nexus-projects/HuangWM/datasets/source/MSCOCO/val2017/\",\n",
+    "#     annFile=\"/fs/nexus-projects/HuangWM/datasets/source/MSCOCO/annotations/captions_val2017.json\",\n",
+    "# )\n",
     "\n",
-    "# Filter generation setup and nsfw\n",
-    "dataset = dataset.filter(\n",
-    "    # filter width and height\n",
-    "    lambda x: (x[\"width\"] == 512 and x[\"height\"] == 512)\n",
-    "    # filter diffusion hyperparameters\n",
-    "    and (x[\"step\"] == 50 and x[\"cfg\"] == 7 and x[\"sampler\"] == \"k_lms\")\n",
-    "    # filter nsfw\n",
-    "    and (x[\"image_nsfw\"] < 0.2 and x[\"prompt_nsfw\"] < 0.1)\n",
-    ")\n",
     "\n",
-    "# Delete unnecessary columns\n",
-    "dataset = dataset.remove_columns(\n",
-    "    [\n",
-    "        \"seed\",\n",
-    "        \"step\",\n",
-    "        \"cfg\",\n",
-    "        \"sampler\",\n",
-    "        \"width\",\n",
-    "        \"height\",\n",
-    "        \"user_name\",\n",
-    "        \"timestamp\",\n",
-    "        \"image_nsfw\",\n",
-    "        \"prompt_nsfw\",\n",
-    "    ]\n",
-    ")"
+    "# # Convert to HuggingFace Dataset\n",
+    "# def gen():\n",
+    "#     for i in trange(len(coco_dataset)):\n",
+    "#         image = dataset[i][0]\n",
+    "#         transform = Compose([CenterCrop(min(image.size)), Resize((512, 512))])\n",
+    "#         prompt = dataset[i][1][0]\n",
+    "#         # Only use the first caption\n",
+    "#         yield {\"image\": transform(image), \"prompt\": prompt}\n",
+    "\n",
+    "\n",
+    "# dataset = Dataset.from_generator(gen)\n",
+    "# dataset.save_to_disk(\"/fs/nexus-projects/HuangWM/datasets/source/mscoco_5k\")\n",
+    "\n",
+    "dataset = load_from_disk(\"/fs/nexus-projects/HuangWM/datasets/source/mscoco_5k\")"
    ]
   },
   {
@@ -66,6 +57,7 @@
    "outputs": [],
    "source": [
     "# Filter and normalize prompts according to CLIP tokenizer\n",
+    "# For MSCOCO, this does not filter out any data\n",
     "dataset = dataset.filter(\n",
     "    lambda data: 0 < len(clip_tokenizer.encode(data[\"prompt\"])) <= 75\n",
     ")\n",
@@ -76,22 +68,6 @@
     "dataset = dataset.remove_columns([\"prompt\"])\n",
     "dataset = dataset.rename_column(\"normalized_prompt\", \"prompt\")\n",
     "\n",
-    "# Filter and remove duplicated prompts\n",
-    "unique_prompts = dataset.unique(\"prompt\")\n",
-    "prompt_to_index = {}\n",
-    "for i, prompt in tqdm(enumerate(dataset[\"prompt\"]), total=len(dataset)):\n",
-    "    if prompt not in prompt_to_index:\n",
-    "        prompt_to_index[prompt] = i\n",
-    "dataset = dataset.select(list(prompt_to_index.values()))\n",
-    "assert len(unique_prompts) == len(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Add perplexity, aesthetic, and artifact scores\n",
     "ppls = []\n",
     "for prompt in tqdm(dataset[\"prompt\"]):\n",
@@ -106,10 +82,10 @@
     "dataset = dataset.add_column(\"aesthetic\", aesthetics)\n",
     "dataset = dataset.add_column(\"artifact\", artifacts)\n",
     "\n",
-    "\n",
     "# Calculate the score for ranking\n",
     "# Curently, the score is defined as: aesthetic + (10 - artifact)\n",
     "# The perplexity is not included in the score because it is not a good indicator\n",
+    "# For MSCOCO, this does change the final images used, since all 5k images are used\n",
     "key = np.array(dataset[\"aesthetic\"]) + (10 - np.array(dataset[\"artifact\"]))\n",
     "dataset_appended = dataset.add_column(\"key\", key)\n",
     "dataset = dataset_appended.sort(\"key\", reverse=True)"
@@ -126,20 +102,18 @@
     "prompt_dict = {}\n",
     "for i in trange(selected_size):\n",
     "    dataset[i][\"image\"].save(\n",
-    "        f\"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real/{i}.png\"\n",
+    "        f\"/fs/nexus-projects/HuangWM/datasets/main/mscoco/real/{i}.png\"\n",
     "    )\n",
     "    prompt_dict[str(i)] = dataset[i][\"prompt\"]\n",
     "with open(\n",
-    "    \"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/prompts.json\",\n",
+    "    \"/fs/nexus-projects/HuangWM/datasets/main/mscoco/prompts.json\",\n",
     "    \"w\",\n",
     ") as json_file:\n",
     "    json.dump(prompt_dict, json_file, ensure_ascii=False, indent=4)\n",
     "\n",
     "\n",
     "# Save the dataset to disk\n",
-    "dataset.save_to_disk(\n",
-    "    \"/fs/nexus-projects/HuangWM/datasets/source/diffusiondb_100k_filtered\"\n",
-    ")"
+    "dataset.save_to_disk(\"/fs/nexus-projects/HuangWM/datasets/source/mscoco_5k_ranked\")"
    ]
   }
  ],
