--- a/dev_notebooks/Decode_Stable_Signature.ipynb
+++ b/dev_notebooks/Decode_Stable_Signature.ipynb
@@ -17,15 +17,22 @@
     "\n",
     "def init_stable_signature_model():\n",
     "    assert torch.cuda.is_available()\n",
-    "    model = torch.jit.load(\n",
-    "        os.path.join(os.environ.get(\"MODEL_DIR\"), \"stable_signature.pt\")\n",
-    "    ).to(\"cuda\")\n",
+    "    model = torch.jit.optimize_for_inference(\n",
+    "        torch.jit.load(\n",
+    "            os.path.join(os.environ.get(\"MODEL_DIR\"), \"stable_signature.pt\"),\n",
+    "            map_location=\"cuda\",\n",
+    "        )\n",
+    "    )\n",
     "    return model\n",
     "\n",
     "\n",
     "def decode_stable_signature(image, model):\n",
     "    return (\n",
-    "        (model(to_tensor([image]).to(\"cuda\")) > 0).squeeze().cpu().numpy().astype(bool)\n",
+    "        (model(to_tensor([image], norm_type=\"imagenet\").to(\"cuda\")) > 0)\n",
+    "        .squeeze()\n",
+    "        .cpu()\n",
+    "        .numpy()\n",
+    "        .astype(bool)\n",
     "    )\n",
     "\n",
     "\n",
