--- a/dev_notebooks/Display_Status_Attacked.ipynb
+++ b/dev_notebooks/Display_Status_Attacked.ipynb
@@ -1,5 +1,22 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from space import *\n",
+    "\n",
+    "\n",
+    "get_all_json_paths(\n",
+    "    lambda dataset_name, attack_name, attack_strength, source_name, result_type: result_type\n",
+    "    == \"status\"\n",
+    ")"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "venv",
