--- a/dev_notebooks/Decode_Stable_Signature.ipynb
+++ b/dev_notebooks/Decode_Stable_Signature.ipynb
@@ -7,33 +7,39 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import torch\n",
+    "import onnxruntime as ort\n",
     "import numpy as np\n",
     "from tqdm.auto import trange\n",
     "from PIL import Image\n",
-    "from utils import to_tensor\n",
     "from space import bit_error_rate, STABLE_SIGNATURE_MESSAGE\n",
     "\n",
     "\n",
     "def init_stable_signature_model():\n",
-    "    assert torch.cuda.is_available()\n",
-    "    model = torch.jit.optimize_for_inference(\n",
-    "        torch.jit.load(\n",
-    "            os.path.join(os.environ.get(\"MODEL_DIR\"), \"stable_signature.pt\"),\n",
-    "            map_location=\"cuda\",\n",
-    "        )\n",
+    "    assert ort.get_device() == \"GPU\"\n",
+    "    gpu_index = 0\n",
+    "    session_options = ort.SessionOptions()\n",
+    "    session_options.intra_op_num_threads = 1\n",
+    "    session_options.inter_op_num_threads = 1\n",
+    "    session_options.log_severity_level = 3\n",
+    "    return ort.InferenceSession(\n",
+    "        \"stable_signature.onnx\",\n",
+    "        # os.path.join(os.environ.get(\"MODEL_DIR\"), \"stable_signature.onnx\"),\n",
+    "        providers=[\"CUDAExecutionProvider\"],\n",
+    "        provider_options=[{\"device_id\": str(gpu_index)}],\n",
+    "        sess_options=session_options,\n",
     "    )\n",
-    "    return model\n",
     "\n",
     "\n",
     "def decode_stable_signature(image, model):\n",
-    "    return (\n",
-    "        (model(to_tensor([image], norm_type=\"imagenet\").to(\"cuda\")) > 0)\n",
-    "        .squeeze()\n",
-    "        .cpu()\n",
-    "        .numpy()\n",
-    "        .astype(bool)\n",
-    "    )\n",
+    "    image = np.array(image, dtype=np.float32) / 255.0\n",
+    "    image -= [0.485, 0.456, 0.406]\n",
+    "    image /= [0.229, 0.224, 0.225]\n",
+    "    image = np.expand_dims(image.transpose((2, 0, 1)), axis=0)\n",
+    "    inputs = {\n",
+    "        \"image\": image,\n",
+    "    }\n",
+    "    outputs = model.run(None, inputs)\n",
+    "    return (outputs[0] > 0).flatten().astype(bool)\n",
     "\n",
     "\n",
     "model = init_stable_signature_model()\n",
