before refactoring space

--- a/dev_notebooks/Decode_Stega_Stamp.ipynb
+++ b/dev_notebooks/Decode_Stega_Stamp.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "from tqdm.auto import trange\n",
     "from PIL import Image, ImageOps\n",
-    "from space import bit_error_rate, STEGA_STAMP_MESSAGE\n",
+    "from space import bit_error_rate, GROUND_TRUTH_MESSAGES\n",
     "\n",
     "\n",
     "def init_stega_stamp_model():\n",
@@ -50,7 +50,9 @@
     "    )\n",
     "    image = Image.open(filename)\n",
     "    decoded_message = decode_stega_stamp(image, model)\n",
-    "    distances.append(bit_error_rate(decoded_message, STEGA_STAMP_MESSAGE))\n",
+    "    distances.append(\n",
+    "        bit_error_rate(decoded_message, GROUND_TRUTH_MESSAGES[\"stegastamp\"])\n",
+    "    )\n",
     "print(f\"Average bit error rate of watermarked images: {np.mean(distances)}\")\n",
     "\n",
     "distances = []\n",
@@ -58,7 +60,9 @@
     "    filename = f\"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real/{i}.png\"\n",
     "    image = Image.open(filename)\n",
     "    decoded_message = decode_stega_stamp(image, model)\n",
-    "    distances.append(bit_error_rate(decoded_message, STEGA_STAMP_MESSAGE))\n",
+    "    distances.append(\n",
+    "        bit_error_rate(decoded_message, GROUND_TRUTH_MESSAGES[\"stegastamp\"])\n",
+    "    )\n",
     "print(f\"Average bit error rate of real images: {np.mean(distances)}\")"
    ]
   }
