--- a/dev_notebooks/Decode_Tree_Ring.ipynb
+++ b/dev_notebooks/Decode_Tree_Ring.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import numpy as np\n",
     "from tqdm.auto import trange\n",
-    "from space import normalized_mse, TREE_RING_MESSAGE\n",
+    "from space import normalized_mse, GROUND_TRUTH_MESSAGES\n",
     "\n",
     "\n",
     "def get_tree_ring_key(size=64, radius=10, channel=3):\n",
@@ -38,7 +38,9 @@
     "    filename = f\"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/tree_ring/{i}_reversed.pkl\"\n",
     "    reversed_latents = torch.load(filename)\n",
     "    decoded_message = decode_tree_ring(reversed_latents, key)\n",
-    "    distances.append(normalized_mse(decoded_message, TREE_RING_MESSAGE))\n",
+    "    distances.append(\n",
+    "        normalized_mse(decoded_message, GROUND_TRUTH_MESSAGES[\"tree_ring\"])\n",
+    "    )\n",
     "print(f\"Average normalized mse of watermarked images: {np.mean(distances)}\")\n",
     "\n",
     "distances = []\n",
@@ -48,7 +50,9 @@
     "    )\n",
     "    reversed_latents = torch.load(filename)\n",
     "    decoded_message = decode_tree_ring(reversed_latents, key)\n",
-    "    distances.append(normalized_mse(decoded_message, TREE_RING_MESSAGE))\n",
+    "    distances.append(\n",
+    "        normalized_mse(decoded_message, GROUND_TRUTH_MESSAGES[\"tree_ring\"])\n",
+    "    )\n",
     "print(f\"Average normalized mse of real images: {np.mean(distances)}\")"
    ]
   }
