finish refactor space

--- a/dev_notebooks/Decode_Stable_Signature.ipynb
+++ b/dev_notebooks/Decode_Stable_Signature.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "from tqdm.auto import trange\n",
     "from PIL import Image\n",
-    "from space import bit_error_rate, GROUND_TRUTH_MESSAGES\n",
+    "from dev import bit_error_rate, GROUND_TRUTH_MESSAGES\n",
     "\n",
     "\n",
     "def init_stable_signature_model():\n",
