--- a/dev_notebooks/Decode_Tree_Ring.ipynb
+++ b/dev_notebooks/Decode_Tree_Ring.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import numpy as np\n",
     "from tqdm.auto import trange\n",
-    "from space import normalized_mse, GROUND_TRUTH_MESSAGES\n",
+    "from dev import normalized_mse, GROUND_TRUTH_MESSAGES\n",
     "\n",
     "\n",
     "def get_tree_ring_key(size=64, radius=10, channel=3):\n",
