--- a/dev_notebooks/Get_Status_Attacked.ipynb
+++ b/dev_notebooks/Get_Status_Attacked.ipynb
@@ -8,13 +8,8 @@
    "source": [
     "import os\n",
     "from PIL import Image, ImageDraw\n",
-    "from space import (\n",
-    "    parse_image_dir_path,\n",
-    "    get_all_image_dir_paths,\n",
+    "from dev import (\n",
     "    encode_image_to_string,\n",
-    "    decode_image_from_string,\n",
-    "    save_json,\n",
-    "    load_json,\n",
     ")\n",
     "\n",
     "path = \"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real\"\n",
