finish debug perf

--- a/dev_notebooks/Decode_Tree_Ring.ipynb
+++ b/dev_notebooks/Decode_Tree_Ring.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import numpy as np\n",
     "from tqdm.auto import trange\n",
-    "from dev import normalized_mse, GROUND_TRUTH_MESSAGES\n",
+    "from dev import complex_l1, GROUND_TRUTH_MESSAGES\n",
     "\n",
     "\n",
     "def get_tree_ring_key(size=64, radius=10, channel=3):\n",
@@ -38,10 +38,8 @@
     "    filename = f\"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/tree_ring/{i}_reversed.pkl\"\n",
     "    reversed_latents = torch.load(filename)\n",
     "    decoded_message = decode_tree_ring(reversed_latents, key)\n",
-    "    distances.append(\n",
-    "        normalized_mse(decoded_message, GROUND_TRUTH_MESSAGES[\"tree_ring\"])\n",
-    "    )\n",
-    "print(f\"Average normalized mse of watermarked images: {np.mean(distances)}\")\n",
+    "    distances.append(complex_l1(decoded_message, GROUND_TRUTH_MESSAGES[\"tree_ring\"]))\n",
+    "print(f\"Average complex L1 of watermarked images: {np.mean(distances)}\")\n",
     "\n",
     "distances = []\n",
     "for i in trange(200):\n",
@@ -50,10 +48,8 @@
     "    )\n",
     "    reversed_latents = torch.load(filename)\n",
     "    decoded_message = decode_tree_ring(reversed_latents, key)\n",
-    "    distances.append(\n",
-    "        normalized_mse(decoded_message, GROUND_TRUTH_MESSAGES[\"tree_ring\"])\n",
-    "    )\n",
-    "print(f\"Average normalized mse of real images: {np.mean(distances)}\")"
+    "    distances.append(complex_l1(decoded_message, GROUND_TRUTH_MESSAGES[\"tree_ring\"]))\n",
+    "print(f\"Average complex L1 of real images: {np.mean(distances)}\")"
    ]
   }
  ],
